first api works

--- a/app/views/currency_templates/step_one.html.erb
+++ b/app/views/currency_templates/step_one.html.erb
@@ -3,7 +3,7 @@
 <p>Go <a href="/">back</a>.</p>
 
 <ul>
-  <%= @array_of_symbols.each do |a_symbol| %>
+  <% @array_of_symbols.each do |a_symbol| %>
     <li>
       <a href="/forex/<%= a_symbol %>">
         Convert <%= a_symbol %> to...
