--- a/app/views/currency_templates/step_two.html.erb
+++ b/app/views/currency_templates/step_two.html.erb
@@ -6,7 +6,7 @@
   <% @array_of_symbols.each do |a_symbol| %>
     <li>
       <a href="/forex/<%= @from_currency %>/<%= a_symbol%>">
-      Convert <%= @from_currency %> to <%= a_symbol %>...
+      Convert 1 <%= @from_currency %> to <%= a_symbol %>...
     </li>
   <% end %>
 </ul>
